# fastapi-basic-auth-sample

./: Dockerfile  README.md  pyproject.toml
src/basic_auth_sample/: main.py
